--- a/test/sideex/sivel2-02-admin-crea-usuario.html
+++ b/test/sideex/sivel2-02-admin-crea-usuario.html
@@ -35,9 +35,9 @@
 </tr>
 <tr><td>runScript</td><td>$('.chosen-select').removeAttr('style'); $('.chosen-container').remove(); $('.chosen-select').removeClass('chosen-select')<datalist><option>$('.chosen-select').removeAttr('style'); $('.chosen-container').remove(); $('.chosen-select').removeClass('chosen-select')</option></datalist></td><td></td>
 </tr>
-<tr><td>addSelection</td><td>id=usuario_sip_grupo_ids<datalist><option>id=usuario_sip_grupo_ids</option><option>css=#usuario_sip_grupo_ids</option><option>//select[@id='usuario_sip_grupo_ids']</option><option>//form[@id='edit_usuario_10079']/div[6]/select</option><option>//div[6]/select</option></datalist></td><td>label=Analista de Casos</td>
+<tr><td>addSelection</td><td>id=usuario_grupo_ids<datalist><option>id=usuario_grupo_ids</option><option>css=#usuario_grupo_ids</option><option>//select[@id='usuario_grupo_ids']</option><option>//form[@id='edit_usuario_10079']/div[6]/select</option><option>//div[6]/select</option></datalist></td><td>label=Analista de Casos</td>
 </tr>
-<tr><td>clickAt</td><td>css=option[value="20"]<datalist><option>css=option[value="20"]</option><option>//option[@value='20']</option><option>//select[@id='usuario_sip_grupo_ids']/option</option><option>//div[6]/select/option</option></datalist></td><td>68,9</td>
+<tr><td>clickAt</td><td>css=option[value="20"]<datalist><option>css=option[value="20"]</option><option>//option[@value='20']</option><option>//select[@id='usuario_grupo_ids']/option</option><option>//div[6]/select/option</option></datalist></td><td>68,9</td>
 </tr>
 <tr><td>runScript</td><td>$('#usuario_email').removeAttr('type')<datalist><option>$('#pais_codiso').removeAttr('type')</option><option>$('#usuario_email').removeAttr('type')</option></datalist></td><td></td>
 </tr>
