Usando convenciones rails para campos, e.g id_pais -> pais_id

--- a/test/sideex/sivel2-11-operador-filtro-victimas.html
+++ b/test/sideex/sivel2-11-operador-filtro-victimas.html
@@ -15,15 +15,15 @@
 </tr>
 <tr><td>clickAt</td><td>link=Listado de víctimas y casos<datalist><option>link=Listado de víctimas y casos</option><option>css=li.dropdown.open &gt; ul.dropdown-menu &gt; li &gt; a</option><option>//a[contains(text(),'Listado de víctimas y casos')]</option><option>//a[contains(@href, '/sivel2/victimas')]</option><option>//li[2]/ul/li/a</option></datalist></td><td>101,17</td>
 </tr>
-<tr><td>clickAt</td><td>id=filtro_busid_caso<datalist><option>id=filtro_busid_caso</option><option>name=filtro[busid_caso]</option><option>css=#filtro_busid_caso</option><option>//input[@id='filtro_busid_caso']</option><option>//div/input</option></datalist></td><td>10,25</td>
+<tr><td>clickAt</td><td>id=filtro_buscaso_id<datalist><option>id=filtro_buscaso_id</option><option>name=filtro[buscaso_id]</option><option>css=#filtro_buscaso_id</option><option>//input[@id='filtro_buscaso_id']</option><option>//div/input</option></datalist></td><td>10,25</td>
 </tr>
-<tr><td>type</td><td>id=filtro_busid_caso<datalist><option>id=filtro_busid_caso</option><option>name=filtro[busid_caso]</option><option>css=#filtro_busid_caso</option><option>//input[@id='filtro_busid_caso']</option><option>//div/input</option></datalist></td><td>5</td>
+<tr><td>type</td><td>id=filtro_buscaso_id<datalist><option>id=filtro_buscaso_id</option><option>name=filtro[buscaso_id]</option><option>css=#filtro_buscaso_id</option><option>//input[@id='filtro_buscaso_id']</option><option>//div/input</option></datalist></td><td>5</td>
 </tr>
 <tr><td>clickAt</td><td>name=filtrar<datalist><option>name=filtrar</option><option>css=input[name="filtrar"]</option><option>//input[@name='filtrar']</option><option>//td[7]/input</option></datalist></td><td>20,18</td>
 </tr>
-<tr><td>clickAt</td><td>id=filtro_busid_caso<datalist><option>id=filtro_busid_caso</option><option>name=filtro[busid_caso]</option><option>css=#filtro_busid_caso</option><option>//input[@id='filtro_busid_caso']</option><option>//div/input</option></datalist></td><td>16,17</td>
+<tr><td>clickAt</td><td>id=filtro_buscaso_id<datalist><option>id=filtro_buscaso_id</option><option>name=filtro[buscaso_id]</option><option>css=#filtro_buscaso_id</option><option>//input[@id='filtro_buscaso_id']</option><option>//div/input</option></datalist></td><td>16,17</td>
 </tr>
-<tr><td>type</td><td>id=filtro_busid_caso<datalist><option>id=filtro_busid_caso</option><option>name=filtro[busid_caso]</option><option>css=#filtro_busid_caso</option><option>//input[@id='filtro_busid_caso']</option><option>//div/input</option></datalist></td><td></td>
+<tr><td>type</td><td>id=filtro_buscaso_id<datalist><option>id=filtro_buscaso_id</option><option>name=filtro[buscaso_id]</option><option>css=#filtro_buscaso_id</option><option>//input[@id='filtro_buscaso_id']</option><option>//div/input</option></datalist></td><td></td>
 </tr>
 <tr><td>clickAt</td><td>name=filtrar<datalist><option>name=filtrar</option><option>css=input[name="filtrar"]</option><option>//input[@name='filtrar']</option><option>//td[7]/input</option></datalist></td><td>37,19</td>
 </tr>
