--- a/test/sideex/sivel2-22-admin-filtros-victimas.html
+++ b/test/sideex/sivel2-22-admin-filtros-victimas.html
@@ -17,19 +17,19 @@
 </tr>
 <tr><td>clickAt</td><td>link=Listado de víctimas y casos<datalist><option>link=Listado de víctimas y casos</option><option>css=li.dropdown.open &gt; ul.dropdown-menu &gt; li &gt; a</option><option>//a[contains(text(),'Listado de víctimas y casos')]</option><option>//a[contains(@href, '/sivel2/victimas')]</option><option>//li[2]/ul/li/a</option></datalist></td><td>61,8</td>
 </tr>
-<tr><td>clickAt</td><td>id=filtro_busid_caso<datalist><option>id=filtro_busid_caso</option><option>name=filtro[busid_caso]</option><option>css=#filtro_busid_caso</option><option>//input[@id='filtro_busid_caso']</option><option>//div/input</option></datalist></td><td>5,18</td>
+<tr><td>clickAt</td><td>id=filtro_buscaso_id<datalist><option>id=filtro_buscaso_id</option><option>name=filtro[buscaso_id]</option><option>css=#filtro_buscaso_id</option><option>//input[@id='filtro_buscaso_id']</option><option>//div/input</option></datalist></td><td>5,18</td>
 </tr>
-<tr><td>clickAt</td><td>id=filtro_busid_caso<datalist><option>id=filtro_busid_caso</option><option>name=filtro[busid_caso]</option><option>css=#filtro_busid_caso</option><option>//input[@id='filtro_busid_caso']</option><option>//div/input</option></datalist></td><td>14,20</td>
+<tr><td>clickAt</td><td>id=filtro_buscaso_id<datalist><option>id=filtro_buscaso_id</option><option>name=filtro[buscaso_id]</option><option>css=#filtro_buscaso_id</option><option>//input[@id='filtro_buscaso_id']</option><option>//div/input</option></datalist></td><td>14,20</td>
 </tr>
-<tr><td>type</td><td>id=filtro_busid_caso<datalist><option>id=filtro_busid_caso</option><option>name=filtro[busid_caso]</option><option>css=#filtro_busid_caso</option><option>//input[@id='filtro_busid_caso']</option><option>//div/input</option></datalist></td><td>19</td>
+<tr><td>type</td><td>id=filtro_buscaso_id<datalist><option>id=filtro_buscaso_id</option><option>name=filtro[buscaso_id]</option><option>css=#filtro_buscaso_id</option><option>//input[@id='filtro_buscaso_id']</option><option>//div/input</option></datalist></td><td>19</td>
 </tr>
 <tr><td>clickAt</td><td>name=filtrar<datalist><option>name=filtrar</option><option>css=input[name="filtrar"]</option><option>//input[@name='filtrar']</option><option>//td[7]/input</option></datalist></td><td>23,16</td>
 </tr>
-<tr><td>clickAt</td><td>id=filtro_busid_caso<datalist><option>id=filtro_busid_caso</option><option>name=filtro[busid_caso]</option><option>css=#filtro_busid_caso</option><option>//input[@id='filtro_busid_caso']</option><option>//div/input</option></datalist></td><td>20,13</td>
+<tr><td>clickAt</td><td>id=filtro_buscaso_id<datalist><option>id=filtro_buscaso_id</option><option>name=filtro[buscaso_id]</option><option>css=#filtro_buscaso_id</option><option>//input[@id='filtro_buscaso_id']</option><option>//div/input</option></datalist></td><td>20,13</td>
 </tr>
-<tr><td>clickAt</td><td>id=filtro_busid_caso<datalist><option>id=filtro_busid_caso</option><option>name=filtro[busid_caso]</option><option>css=#filtro_busid_caso</option><option>//input[@id='filtro_busid_caso']</option><option>//div/input</option></datalist></td><td>16,18</td>
+<tr><td>clickAt</td><td>id=filtro_buscaso_id<datalist><option>id=filtro_buscaso_id</option><option>name=filtro[buscaso_id]</option><option>css=#filtro_buscaso_id</option><option>//input[@id='filtro_buscaso_id']</option><option>//div/input</option></datalist></td><td>16,18</td>
 </tr>
-<tr><td>type</td><td>id=filtro_busid_caso<datalist><option>id=filtro_busid_caso</option><option>name=filtro[busid_caso]</option><option>css=#filtro_busid_caso</option><option>//input[@id='filtro_busid_caso']</option><option>//div/input</option></datalist></td><td></td>
+<tr><td>type</td><td>id=filtro_buscaso_id<datalist><option>id=filtro_buscaso_id</option><option>name=filtro[buscaso_id]</option><option>css=#filtro_buscaso_id</option><option>//input[@id='filtro_buscaso_id']</option><option>//div/input</option></datalist></td><td></td>
 </tr>
 <tr><td>clickAt</td><td>name=filtrar<datalist><option>name=filtrar</option><option>css=input[name="filtrar"]</option><option>//input[@name='filtrar']</option><option>//td[7]/input</option></datalist></td><td>37,6</td>
 </tr>
