doc en sivel2 y renombra clase por centropoblado

--- a/test/sideex/sivel2-admin-4-filtros-casos.html
+++ b/test/sideex/sivel2-admin-4-filtros-casos.html
@@ -39,9 +39,9 @@
 </tr>
 <tr><td>clickAt</td><td>//div[@id='ubicacion']/div/div/div[2]/div/div/select<datalist><option>id=caso_ubicacion_attributes_102_municipio_id</option><option>name=caso[ubicacion_attributes][102][municipio_id]</option><option>css=#caso_ubicacion_attributes_102_municipio_id</option><option>//select[@id='caso_ubicacion_attributes_102_municipio_id']</option><option>//div[@id='ubicacion']/div/div/div[2]/div/div/select</option><option>//div[2]/div/div/select</option></datalist></td><td>-40,-278</td>
 </tr>
-<tr><td>select</td><td>//div[@id='ubicacion']/div/div/div[2]/div[2]/div/select<datalist><option>id=caso_ubicacion_attributes_102_clase_id</option><option>name=caso[ubicacion_attributes][102][clase_id]</option><option>css=#caso_ubicacion_attributes_102_clase_id</option><option>//select[@id='caso_ubicacion_attributes_102_clase_id']</option><option>//div[@id='ubicacion']/div/div/div[2]/div[2]/div/select</option><option>//div[2]/div[2]/div/select</option></datalist></td><td>label=CARTAGENA</td>
+<tr><td>select</td><td>//div[@id='ubicacion']/div/div/div[2]/div[2]/div/select<datalist><option>id=caso_ubicacion_attributes_102_centropoblado_id</option><option>name=caso[ubicacion_attributes][102][centropoblado_id]</option><option>css=#caso_ubicacion_attributes_102_centropoblado_id</option><option>//select[@id='caso_ubicacion_attributes_102_centropoblado_id']</option><option>//div[@id='ubicacion']/div/div/div[2]/div[2]/div/select</option><option>//div[2]/div[2]/div/select</option></datalist></td><td>label=CARTAGENA</td>
 </tr>
-<tr><td>clickAt</td><td>//div[@id='ubicacion']/div/div/div[2]/div[2]/div/select<datalist><option>id=caso_ubicacion_attributes_102_clase_id</option><option>name=caso[ubicacion_attributes][102][clase_id]</option><option>css=#caso_ubicacion_attributes_102_clase_id</option><option>//select[@id='caso_ubicacion_attributes_102_clase_id']</option><option>//div[@id='ubicacion']/div/div/div[2]/div[2]/div/select</option><option>//div[2]/div[2]/div/select</option></datalist></td><td>-625,-278</td>
+<tr><td>clickAt</td><td>//div[@id='ubicacion']/div/div/div[2]/div[2]/div/select<datalist><option>id=caso_ubicacion_attributes_102_centropoblado_id</option><option>name=caso[ubicacion_attributes][102][centropoblado_id]</option><option>css=#caso_ubicacion_attributes_102_centropoblado_id</option><option>//select[@id='caso_ubicacion_attributes_102_centropoblado_id']</option><option>//div[@id='ubicacion']/div/div/div[2]/div[2]/div/select</option><option>//div[2]/div[2]/div/select</option></datalist></td><td>-625,-278</td>
 </tr>
 <tr><td>clickAt</td><td>link=Presuntos Responsables<datalist><option>link=Presuntos Responsables</option><option>//a[contains(text(),'Presuntos Responsables')]</option><option>//form[@id='edit_caso_159']/div/div[2]/ul/li[6]/a</option><option>//a[contains(@href, '#presponsable')]</option><option>//li[6]/a</option></datalist></td><td>43,21</td>
 </tr>
@@ -226,7 +226,7 @@
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">filtro-casos-ubicacion-clase</td></tr>
+<tr><td rowspan="1" colspan="3">filtro-casos-ubicacion-centropoblado</td></tr>
 </thead>
 <tbody>
 <tr><td>pause</td><td><datalist><option></option><option>link=Víctimas</option><option>//a[contains(text(),'Víctimas')]</option><option>//form[@id='edit_caso_691']/div/div[2]/ul/li[7]/a</option><option>//a[contains(@href, '#victima')]</option><option>//li[7]/a</option></datalist></td><td>500</td>
@@ -239,9 +239,9 @@
 </tr>
 <tr><td>clickAt</td><td>id=filtro_municipio_id<datalist><option>id=filtro_municipio_id</option><option>name=filtro[municipio_id]</option><option>css=#filtro_municipio_id</option><option>//select[@id='filtro_municipio_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[3]/div/select</option><option>//div[3]/div/select</option></datalist></td><td>-535,-239</td>
 </tr>
-<tr><td>select</td><td>id=filtro_clase_id<datalist><option>id=filtro_clase_id</option><option>name=filtro[clase_id]</option><option>css=#filtro_clase_id</option><option>//select[@id='filtro_clase_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[4]/div/select</option><option>//div[4]/div/select</option></datalist></td><td>label=VERSALLES</td>
+<tr><td>select</td><td>id=filtro_centropoblado_id<datalist><option>id=filtro_centropoblado_id</option><option>name=filtro[centropoblado_id]</option><option>css=#filtro_centropoblado_id</option><option>//select[@id='filtro_centropoblado_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[4]/div/select</option><option>//div[4]/div/select</option></datalist></td><td>label=VERSALLES</td>
 </tr>
-<tr><td>clickAt</td><td>id=filtro_clase_id<datalist><option>id=filtro_clase_id</option><option>name=filtro[clase_id]</option><option>css=#filtro_clase_id</option><option>//select[@id='filtro_clase_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[4]/div/select</option><option>//div[4]/div/select</option></datalist></td><td>-729,-239</td>
+<tr><td>clickAt</td><td>id=filtro_centropoblado_id<datalist><option>id=filtro_centropoblado_id</option><option>name=filtro[centropoblado_id]</option><option>css=#filtro_centropoblado_id</option><option>//select[@id='filtro_centropoblado_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[4]/div/select</option><option>//div[4]/div/select</option></datalist></td><td>-729,-239</td>
 </tr>
 <tr><td>clickAt</td><td>name=commit<datalist><option>name=commit</option><option>css=input[name="commit"]</option><option>//input[@name='commit']</option><option>//div[4]/input</option></datalist></td><td>33,25</td>
 </tr>
@@ -257,9 +257,9 @@
 </tr>
 <tr><td>clickAt</td><td>id=filtro_municipio_id<datalist><option>id=filtro_municipio_id</option><option>name=filtro[municipio_id]</option><option>css=#filtro_municipio_id</option><option>//select[@id='filtro_municipio_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[3]/div/select</option><option>//div[3]/div/select</option></datalist></td><td>-535,-239</td>
 </tr>
-<tr><td>select</td><td>id=filtro_clase_id<datalist><option>id=filtro_clase_id</option><option>name=filtro[clase_id]</option><option>css=#filtro_clase_id</option><option>//select[@id='filtro_clase_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[4]/div/select</option><option>//div[4]/div/select</option></datalist></td><td>label=CACAOTAL</td>
+<tr><td>select</td><td>id=filtro_centropoblado_id<datalist><option>id=filtro_centropoblado_id</option><option>name=filtro[centropoblado_id]</option><option>css=#filtro_centropoblado_id</option><option>//select[@id='filtro_centropoblado_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[4]/div/select</option><option>//div[4]/div/select</option></datalist></td><td>label=CACAOTAL</td>
 </tr>
-<tr><td>clickAt</td><td>id=filtro_clase_id<datalist><option>id=filtro_clase_id</option><option>name=filtro[clase_id]</option><option>css=#filtro_clase_id</option><option>//select[@id='filtro_clase_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[4]/div/select</option><option>//div[4]/div/select</option></datalist></td><td>-729,-239</td>
+<tr><td>clickAt</td><td>id=filtro_centropoblado_id<datalist><option>id=filtro_centropoblado_id</option><option>name=filtro[centropoblado_id]</option><option>css=#filtro_centropoblado_id</option><option>//select[@id='filtro_centropoblado_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[4]/div/select</option><option>//div[4]/div/select</option></datalist></td><td>-729,-239</td>
 </tr>
 <tr><td>clickAt</td><td>name=commit<datalist><option>name=commit</option><option>css=input[name="commit"]</option><option>//input[@name='commit']</option><option>//div[4]/input</option></datalist></td><td>42,22</td>
 </tr>
