--- a/test/sideex/sivel2-08-operador-filtros-caso.html
+++ b/test/sideex/sivel2-08-operador-filtros-caso.html
@@ -74,7 +74,7 @@
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">filtro-casos-ubicacion-clase</td></tr>
+<tr><td rowspan="1" colspan="3">filtro-casos-ubicacion-centropoblado</td></tr>
 </thead>
 <tbody>
 <tr><td>select</td><td>id=filtro_departamento_id<datalist><option>id=filtro_departamento_id</option><option>name=filtro[departamento_id]</option><option>css=#filtro_departamento_id</option><option>//select[@id='filtro_departamento_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[2]/div/select</option><option>//select</option></datalist></td><td>label=CAQUETÁ</td>
@@ -85,9 +85,9 @@
 </tr>
 <tr><td>clickAt</td><td>id=filtro_municipio_id<datalist><option>id=filtro_municipio_id</option><option>name=filtro[municipio_id]</option><option>css=#filtro_municipio_id</option><option>//select[@id='filtro_municipio_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[3]/div/select</option><option>//div[3]/div/select</option></datalist></td><td>-578,-239</td>
 </tr>
-<tr><td>select</td><td>id=filtro_clase_id<datalist><option>id=filtro_clase_id</option><option>name=filtro[clase_id]</option><option>css=#filtro_clase_id</option><option>//select[@id='filtro_clase_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[4]/div/select</option><option>//div[4]/div/select</option></datalist></td><td>label=MAGUARE</td>
+<tr><td>select</td><td>id=filtro_centropoblado_id<datalist><option>id=filtro_centropoblado_id</option><option>name=filtro[centropoblado_id]</option><option>css=#filtro_centropoblado_id</option><option>//select[@id='filtro_centropoblado_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[4]/div/select</option><option>//div[4]/div/select</option></datalist></td><td>label=MAGUARE</td>
 </tr>
-<tr><td>clickAt</td><td>id=filtro_clase_id<datalist><option>id=filtro_clase_id</option><option>name=filtro[clase_id]</option><option>css=#filtro_clase_id</option><option>//select[@id='filtro_clase_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[4]/div/select</option><option>//div[4]/div/select</option></datalist></td><td>-772,-239</td>
+<tr><td>clickAt</td><td>id=filtro_centropoblado_id<datalist><option>id=filtro_centropoblado_id</option><option>name=filtro[centropoblado_id]</option><option>css=#filtro_centropoblado_id</option><option>//select[@id='filtro_centropoblado_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[4]/div/select</option><option>//div[4]/div/select</option></datalist></td><td>-772,-239</td>
 </tr>
 <tr><td>clickAt</td><td>name=commit<datalist><option>name=commit</option><option>css=input[name="commit"]</option><option>//input[@name='commit']</option><option>//div[4]/input</option></datalist></td><td>40,24</td>
 </tr>
