--- a/test/sideex/sivel2-administrador-4-filtros-casos.html
+++ b/test/sideex/sivel2-administrador-4-filtros-casos.html
@@ -72,14 +72,14 @@
 </tbody></table>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">filtro-casos-ubicacion-clase</td></tr>
+<tr><td rowspan="1" colspan="3">filtro-casos-ubicacion-centropoblado</td></tr>
 </thead>
 <tbody>
 <tr><td>pause</td><td><datalist><option></option><option>link=Víctimas</option><option>//a[contains(text(),'Víctimas')]</option><option>//form[@id='edit_caso_691']/div/div[2]/ul/li[7]/a</option><option>//a[contains(@href, '#victima')]</option><option>//li[7]/a</option></datalist></td><td>500</td>
 </tr>
-<tr><td>select</td><td>id=filtro_clase_id<datalist><option>id=filtro_clase_id</option><option>name=filtro[clase_id]</option><option>css=#filtro_clase_id</option><option>//select[@id='filtro_clase_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[4]/div/select</option><option>//div[4]/div/select</option></datalist></td><td>label=CALAMAR</td>
+<tr><td>select</td><td>id=filtro_centropoblado_id<datalist><option>id=filtro_centropoblado_id</option><option>name=filtro[centropoblado_id]</option><option>css=#filtro_centropoblado_id</option><option>//select[@id='filtro_centropoblado_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[4]/div/select</option><option>//div[4]/div/select</option></datalist></td><td>label=CALAMAR</td>
 </tr>
-<tr><td>clickAt</td><td>id=filtro_clase_id<datalist><option>id=filtro_clase_id</option><option>name=filtro[clase_id]</option><option>css=#filtro_clase_id</option><option>//select[@id='filtro_clase_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[4]/div/select</option><option>//div[4]/div/select</option></datalist></td><td>-729,-239</td>
+<tr><td>clickAt</td><td>id=filtro_centropoblado_id<datalist><option>id=filtro_centropoblado_id</option><option>name=filtro[centropoblado_id]</option><option>css=#filtro_centropoblado_id</option><option>//select[@id='filtro_centropoblado_id']</option><option>//div[@id='filtro_avanzado']/div/div[2]/div[4]/div/select</option><option>//div[4]/div/select</option></datalist></td><td>-729,-239</td>
 </tr>
 <tr><td>clickAt</td><td>name=commit<datalist><option>name=commit</option><option>css=input[name="commit"]</option><option>//input[@name='commit']</option><option>//div[4]/input</option></datalist></td><td>43,19</td>
 </tr>
